docs/api/qiskit/0.40/qiskit.algorithms.gradients.FiniteDiffEstimatorGradient.md
---
title: FiniteDiffEstimatorGradient
description: API reference for qiskit.algorithms.gradients.FiniteDiffEstimatorGradient
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.gradients.FiniteDiffEstimatorGradient
---

# FiniteDiffEstimatorGradient

<span id="qiskit.algorithms.gradients.FiniteDiffEstimatorGradient" />

`FiniteDiffEstimatorGradient(estimator, epsilon, options=None, *, method='central')`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.40/qiskit/algorithms/gradients/finite_diff_estimator_gradient.py "view source code")

Bases: [`qiskit.algorithms.gradients.base_estimator_gradient.BaseEstimatorGradient`](qiskit.algorithms.gradients.BaseEstimatorGradient "qiskit.algorithms.gradients.base_estimator_gradient.BaseEstimatorGradient")

Compute the gradients of the expectation values by finite difference method \[1].

**Reference:** \[1] [Finite difference method](https://en.wikipedia.org/wiki/Finite_difference_method)

**Parameters**

*   **estimator** ([*BaseEstimator*](qiskit.primitives.BaseEstimator "qiskit.primitives.BaseEstimator")) – The estimator used to compute the gradients.

*   **epsilon** (*float*) – The offset size for the finite difference gradients.

*   **options** ([*Options*](qiskit.providers.Options "qiskit.providers.Options") *| None*) – Primitive backend runtime options used for circuit execution. The order of priority is: options in `run` method > gradient’s default options > primitive’s default setting. Higher priority setting overrides lower priority setting

*   **method** (*Literal\[('central', 'forward', 'backward')]*) –

    The computation method of the gradients.

    > *   `central` computes $\frac{f(x+e)-f(x-e)}{2e}$,
    > *   `forward` computes $\frac{f(x+e) - f(x)}{e}$,
    > *   `backward` computes $\frac{f(x)-f(x-e)}{e}$

    where $e$ is epsilon.

**Raises**

*   **ValueError** – If `epsilon` is not positive.
*   **TypeError** – If `method` is invalid.

## Methods

### run

<span id="qiskit.algorithms.gradients.FiniteDiffEstimatorGradient.run" />

`FiniteDiffEstimatorGradient.run(circuits, observables, parameter_values, parameters=None, **options)`

Run the job of the estimator gradient on the given circuits.

**Parameters**

*   **circuits** – The list of quantum circuits to compute the gradients.
*   **observables** – The list of observables.
*   **parameter\_values** – The list of parameter values to be bound to the circuit.
*   **parameters** – The sequence of parameters to calculate only the gradients of the specified parameters. Each sequence of parameters corresponds to a circuit in `circuits`. Defaults to None, which means that the gradients of all parameters in each circuit are calculated.
*   **options** – Primitive backend runtime options used for circuit execution. The order of priority is: options in `run` method > gradient’s default options > primitive’s default setting. Higher priority setting overrides lower priority setting

**Returns**

The job object of the gradients of the expectation values. The i-th result corresponds to `circuits[i]` evaluated with parameters bound as `parameter_values[i]`. The j-th element of the i-th result corresponds to the gradient of the i-th circuit with respect to the j-th parameter.

**Raises**

**ValueError** – Invalid arguments are given.

### update\_default\_options

<span id="qiskit.algorithms.gradients.FiniteDiffEstimatorGradient.update_default_options" />

`FiniteDiffEstimatorGradient.update_default_options(**options)`

Update the gradient’s default options setting.

**Parameters**

**\*\*options** – The fields to update the default options.

## Attributes

<span id="qiskit.algorithms.gradients.FiniteDiffEstimatorGradient.derivative_type" />

### derivative\_type

Return the derivative type (real, imaginary or complex).

**Return type**

[`DerivativeType`](qiskit.algorithms.gradients.DerivativeType "qiskit.algorithms.gradients.utils.DerivativeType")

**Returns**

The derivative type.

<span id="qiskit.algorithms.gradients.FiniteDiffEstimatorGradient.options" />

### options

Return the union of estimator options setting and gradient default options, where, if the same field is set in both, the gradient’s default options override the primitive’s default setting.

**Return type**

[`Options`](qiskit.providers.Options "qiskit.providers.options.Options")

**Returns**

The gradient default + estimator options.

